public/static/css/main.styl
body
  font-family OpenSans
  background url("/static/img/bg.png") no-repeat top right
  background-color #f1efe8
  margin 0

#page
  min-height 100%
  top 10px
  width 960px
  margin-left auto
  margin-right auto
  position relative

#header
  top 0
  width 960px
  margin-left auto
  margin-right auto
  position relative

#logo
  margin-top 20px

#mainContent
  position relative
  padding-bottom 30px

a
  text-decoration none !important

#follow-on-twitter
  right 0
  position absolute

#navbar
  top 55px
  right 0
  position absolute
  font-size 15pt

#body_index #navbar-videos,
#body_video #navbar-videos,
#body_cheatsheet #navbar-cheatsheet,
#body_about #navbar-about,
#body_stats #navbar-stats
  font-weight bold
  border-bottom 3px solid #a8b4c3

#navbar li
  display inline
  list-style-type none
  margin-left 32px

#navbar li a
  color #000

#legend
  font-size 13pt
  position absolute
  right 0
  top 170px
  margin-right 10px

#legend ul
  list-style none
  margin-left 15px
  margin-top 0
  margin-bottom 0
  text-align right

#legend li
  display inline-block
  list-style-type none
  margin-left 20px

#body_index ul.videos a
  color #0f1936

@font-face
  font-family "OpenSans"
  font-style normal
  font-weight normal
  src url("/static/fonts/OpenSans-Regular.ttf")

@font-face
  font-family "OpenSansLight"
  font-style normal
  font-weight normal
  src url("/static/fonts/OpenSans-Light.ttf")

#mainTitle
  margin-top 0
  margin-bottom 0
  font-size 40pt
  font-family OpenSansLight

#footer img
  vertical-align middle

.card-container h1
  font-size 30pt
  padding-bottom 0px
  color #9bc5cf

#body_video .card-container h1
  font-size 20pt

.card-container
  background-color #fff
  padding-top 5px
  padding-bottom 20px
  padding-left 20px
  padding-right 20px
  margin-top 30px
  margin-bottom 30px
  border-radius 25px

.legend-item
  width 13px
  height 13px
  display inline-block
  border-style solid
  border-width 1px
  margin-left 10px
  margin-right 10px

#watched-legend-item
  background-color #db832a

#unavailable-legend-item
  background-color #d9d9d9

#unwatched-legend-item
  background-color #9bc5cf

#subnav
  margin-top: 4px;
  width: 900px;

#subnav ul
  list-style none
  float right
  margin-left 0
  padding-left 0
  margin-top 0

#subnav li
  display inline
  margin-top 10px
  margin-left 10px

#subnav a

ul.videos
  margin-left 0
  padding-left 0

ul.videos li
  list-style-type none
  border-top 2px solid #f6f6f6
  padding-top 15px
  margin-bottom 15px
  margin-left 0
  padding-left 0
  font-size 15pt

ul.videos li span
  background url("/static/img/play-unavailable.png") no-repeat top left
  line-height 48px
  height 48px
  vertical-align middle
  padding 0px 0 0 62px
  display inline-block
  color #a3a096

ul.videos a span
  background url("/static/img/play-unwatched.png") no-repeat top left
  color #000

ul.videos span.watched
  background url("/static/img/play-watched.png") no-repeat top left
  color #000

#footer
  color #fff
  background-color #363f48
  position relative
  bottom 0
  left 0
  right 0
  height 60px
  margin 0 auto
  padding 0

#footer a
  color #fff
  font-weight normal

#footer li
  display inline-block
  list-style-type none

#footer ul.navigation
  left 15px
  position absolute

#footer ul.social
  right 15px
  position absolute

#footer ul.social li
  padding-left 10px
  padding-right 10px

#footer ul.navigation li + li::before
  content " / "
  padding 10px

.persona-button
  top 5px

#login, #logout
  display none

.persona-button span
  padding-left 44px
  font-size 11pt
  color #fff

.persona-button span:hover
  color #fff

